--- a/css/site.css
+++ b/css/site.css
@@ -130,7 +130,7 @@
     height: 24px; 
     padding-top: 3px; 
     padding-left: 7px; 
-    margin-bottom: 7px;
+    margin-bottom: 4px;
 }
 
 .resource-planning {
@@ -145,23 +145,27 @@
 }
 
 .day-progress {
-    border: 1px solid #d8d8d8;
+    border: 1px solid #bbb;
     width: 100%;
-    height: 24px;
+    height: 23px;
     margin-left: 3px;
-    margin-bottom: 7px;
+    margin-bottom: 4px;
 }
 .day-progress__bar__onbeschikbaar, .day-progress__bar__planned, .day-progress__bar__open, .day-progress__bar__conflicted { float: left; }
 
 .day-progress__bar__onbeschikbaar {
-    height: 23px;
-    background-color: lightgray;
+    height: 22px;
+    background-image: linear-gradient(45deg, rgba(223,223,223, 0.5) 27.78%, rgba(212,212,212, 0.5) 27.78%, rgba(212,212,212, 0.5) 50%, rgba(223,223,223, 0.5) 50%, rgba(223,223,223, 0.5) 77.78%, rgba(212,212,212, 0.5) 77.78%, rgba(212,212,212, 0.5) 100%);
+    background-size: 12.73px 12.73px;
 }
 
 .day-progress__bar__planned, .day-progress__bar__open, .day-progress__bar__conflicted {
-    height: 14px;
-    margin-top: 4px;
+    height: 16px;
+    margin-top: 3px;
+    border: 1px solid #888;
 }
+.day-progress__bar__planned{ border-color: #666666;}
+.day-progress__bar__open{ border:none; }
 
 .day-progress__bar__planned {
     background-color: rgba(0, 100, 180, 0.7);
@@ -172,7 +176,7 @@
 }
 
 .planning {
-    border: 1px solid #d8d8d8;
+    border: 1px solid #888;
 }
 
 .scrolling-wrapper {
@@ -214,7 +218,7 @@
     position: absolute;
 }
 
-.conflicted { background-color: rgba(250, 175, 30, 0.7);}
+.conflicted { border-color: darkorange; }
 
 .planned-task-info > .title { margin: 7px 0;}
 .planned-task-info > .a-avatar { margin-right: 5px;}
@@ -224,5 +228,5 @@
     position: relative;
     width: 1750px;
     border-right: 1px solid red;
-    background-color: rgba(0, 0, 0, 0.2)
+    background-color: rgba(25, 59, 119, 0.1);
 }
