even more changes

--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 75px 20px 0 20px;
+    margin: 75px 20px 20px 20px;
 }
 
 /* SIDENAV */
@@ -16,8 +16,16 @@
 }
 
 .filter-panel__head {
+    position: fixed;
+    top: 0;
+    width: 380px;
+    background: white;
     align-items: center;
     border-bottom: 1px solid #d8d8d8;
+}
+
+.filter-panel__body {
+    margin-top: 50px;
 }
 
 .filter-panel__nav {
@@ -36,6 +44,8 @@
     width: 30px;
 }
 
+.filter-panel__container {overflow-y: scroll;}
+
 .task, .planned-task {
     background: white;
     border: 1px solid #7d7d7d;
@@ -46,6 +56,7 @@
 .task__info {
     padding: 10px;
     width: 100%;
+    cursor: pointer;
 }
 
 .task__title {
@@ -94,7 +105,9 @@
     float: left;
 }
 .resources .tab {
-    border: 1px solid #d8d8d8;
+    border: 1px solid #888;
+    border-bottom: 1px solid #d8d8d8;
+    border-right: 1px solid #d8d8d8;
     display: block;
     height: 61px;
 }
@@ -112,9 +125,18 @@
     color: #d8d8d8;
 }
 
+.tiny-avatar {
+    font-size: 0.8rem;
+    height: 1.25rem;
+    line-height: 1.25rem;
+    width: 1.25rem;
+    float: right;
+    margin-right: 3px;
+}
+
 .resource-scroll {
     overflow-x: scroll;
-    border: 1px solid #d8d8d8;
+    border: 1px solid #888;
     border-left: none;
     border-bottom: none;
 }
@@ -151,7 +173,7 @@
     margin-left: 3px;
     margin-bottom: 4px;
 }
-.day-progress__bar__onbeschikbaar, .day-progress__bar__planned, .day-progress__bar__open, .day-progress__bar__conflicted { float: left; }
+.day-progress__bar__onbeschikbaar, .day-progress__bar__planned, .day-progress__bar__open, .day-progress__bar__conflicted, .day-progress__bar__overtime { float: left; }
 
 .day-progress__bar__onbeschikbaar {
     height: 22px;
@@ -159,31 +181,38 @@
     background-size: 12.73px 12.73px;
 }
 
-.day-progress__bar__planned, .day-progress__bar__open, .day-progress__bar__conflicted {
+.day-progress__bar__planned, .day-progress__bar__open, .day-progress__bar__conflicted, .day-progress__bar__overtime {
     height: 16px;
     margin-top: 3px;
     border: 1px solid #888;
 }
-.day-progress__bar__planned{ border-color: #666666;}
 .day-progress__bar__open{ border:none; }
 
 .day-progress__bar__planned {
     background-color: rgba(0, 100, 180, 0.7);
+    border-color: #666;
+    cursor: pointer;
 }
-
+.day-progress__bar__overtime{
+    background-color: #da291c;
+    cursor: pointer;
+}
 .day-progress__bar__conflicted {
     background-color: rgba(250, 175, 30, 0.7);
+    cursor:pointer;
 }
 
 .planning {
     border: 1px solid #888;
-}
-
-.scrolling-wrapper {
+    box-shadow: 1px 1px 3px 0px inset rgba(0,0,0,0.2);
     width: 100%;
     height: 650px;
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: scroll;
+}
+
+.scrolling-wrapper {
+    max-height: 750px;
 }
 
 .scrolling-wrapper .som {
@@ -193,7 +222,7 @@
 
 .scrolling-wrapper .som > div {
     width: 70px;
-    height: 650px;
+    height: 915px;
     float: left;
 }
 
@@ -209,7 +238,19 @@
 .planned-task {
     height: 115px;
     width: 200px;
-    position: relative; 
+    position: absolute;
+    cursor: pointer;
+    z-index: 3
+}
+
+.planned-task.overtime { border-right: none; }
+
+.planned-task:hover {
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);    
+    margin-top: -1px;     
+    margin-left: -1px;     
+    margin-right: 1px;     
+    margin-bottom: 1px;
 }
 
 .planned-task-info {
@@ -224,9 +265,18 @@
 .planned-task-info > .a-avatar { margin-right: 5px;}
 .current-time {
     z-index: 2;
-    height: 800px;
+    height: 915px;
     position: relative;
     width: 1750px;
-    border-right: 1px solid red;
+    border-right: 2px solid red;
     background-color: rgba(25, 59, 119, 0.1);
 }
+
+.avatar1 { background-color: darkgoldenrod}
+.avatar2 { background-color: olive}
+.avatar3 { background-color: #924C49}
+.avatar4 { background-color: #4A148C}
+.avatar5 { background-color: #36432F}
+.avatar6 { background-color: #0D7E8C}
+.avatar7 { background-color: #695F60}
+.avatar8 { background-color: #95865F}
